--- a/package.json
+++ b/package.json
@@ -8,18 +8,109 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "dependencies": {
+    "@emotion/memoize": "^0.8.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
+    "@hookform/resolvers": "^2.9.10",
+    "@material-tailwind/react": "^1.2.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.114",
+    "@mui/material": "^5.11.2",
+    "@mui/x-date-pickers": "^5.0.12",
+    "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@sentry/nextjs": "^7.36.0",
+    "@sentry/react": "^7.28.1",
+    "@svgr/webpack": "^6.5.1",
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
+    "@types/pluralize": "^0.0.29",
+    "@types/query-string": "^6.3.0",
+    "@types/react": "^18.0.26",
+    "@types/react-burger-menu": "^2.8.3",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-slick": "^0.23.10",
+    "@types/react-sticky": "^6.0.4",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-saga": "^0.10.5",
+    "clsx": "^1.2.1",
+    "cypress": "^12.6.0",
+    "date-fns": "^2.29.3",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
+    "google-map-react": "^2.2.0",
+    "i18next": "^22.4.6",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
+    "next": "^13.1.1",
+    "next-images": "^1.8.4",
+    "next-redux-wrapper": "^8.1.0",
+    "nextjs-progressbar": "^0.0.16",
+    "pluralize": "^8.0.0",
+    "query-string": "^8.1.0",
+    "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.3",
+    "react-geocode": "^0.2.3",
+    "react-google-map-picker": "^1.2.3",
+    "react-hook-form": "^7.41.3",
+    "react-i18next": "^12.1.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^3.1.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-modal": "^3.16.1",
+    "react-phone-number-input": "^3.2.16",
+    "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
+    "react-scrollspy": "^3.4.3",
+    "react-select": "^5.7.0",
+    "react-share": "^4.4.1",
+    "react-slick": "^0.29.0",
+    "react-sticky": "^6.0.3",
+    "react-toastify": "^9.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.2",
+    "sharp": "^0.31.3",
+    "slick-carousel": "^1.8.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "typescript": "^4.9.4",
+    "web-vitals": "^3.1.0",
+    "yarn": "^1.22.19",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
+    "@redux-devtools/extension": "^3.2.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/google-map-react": "^2.1.7",
+    "@types/react-modal": "^3.13.1",
+    "autoprefixer": "^10.4.13",
+    "call-bind": "^1.0.2",
+    "function-bind": "^1.1.1",
+    "is-arguments": "^1.1.1",
+    "msw": "^0.49.2",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-rtl": "^0.9.0",
+    "whatwg-fetch": "^3.6.2"
   }
+
+
 }
