--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,19 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+       "@/layouts/*": ["src/components/layouts/*"],
+      "@/components/*": ["src/components/*"],
+      "@/widgets/*": ["src/components/widgets/*"],
+      "@/redux/*": ["src/redux/*"],
+      "@/types/*": ["src/types/*"],
+      "@/pages/*": ["pages/*"],
+      "@/appIcons/*": ["public/assets/icons/*"],
+      "@/appImages/*": ["public/assets/images/*"],
+      "@/constants/*": ["src/constants.ts"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/styles/*": ["styles/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
