--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-select": "^5.7.0",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
+    "react-social-icons": "^5.15.0",
     "react-sticky": "^6.0.3",
     "react-toastify": "^9.1.1",
     "redux-logger": "^3.0.6",
