--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@sentry/nextjs": "^7.36.0",
     "@sentry/react": "^7.28.1",
-    "@svgr/webpack": "^6.5.1",
+    "@svgr/plugin-svgo": "^7.0.0",
+    "@svgr/webpack": "^7.0.0",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/lodash": "^4.14.191",
@@ -53,6 +54,7 @@
     "moment": "^2.29.4",
     "next": "^13.1.1",
     "next-images": "^1.8.4",
+    "next-plugin-svgr": "^1.1.4",
     "next-redux-wrapper": "^8.1.0",
     "nextjs-progressbar": "^0.0.16",
     "pluralize": "^8.0.0",
@@ -80,6 +82,7 @@
     "react-slick": "^0.29.0",
     "react-sticky": "^6.0.3",
     "react-toastify": "^9.1.1",
+    "react-ui-scrollspy": "^2.3.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
@@ -112,4 +115,3 @@
     "whatwg-fetch": "^3.6.2"
   }
 }
-
