--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-slick": "^0.29.0",
     "react-sticky": "^6.0.3",
     "react-toastify": "^9.1.1",
+    "react18-input-otp": "^1.1.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
@@ -112,4 +113,3 @@
     "whatwg-fetch": "^3.6.2"
   }
 }
-
