--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
+    "react-content-loader": "^6.2.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.3",
@@ -70,7 +71,7 @@
     "react-i18next": "^12.2.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading": "^2.0.3",
-    "react-loading-skeleton": "^3.1.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-modal": "^3.16.1",
     "react-phone-number-input": "^3.2.16",
