--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
+    "@types/react-scrollspy": "^3.3.5",
     "@types/react-slick": "^0.23.10",
     "@types/react-sticky": "^6.0.4",
     "@types/redux-logger": "^3.0.9",
