--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.13",
     "call-bind": "^1.0.2",
+    "eslint": "^8.42.0",
     "function-bind": "^1.1.1",
     "is-arguments": "^1.1.1",
     "msw": "^0.49.2",
