--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/pluralize": "^0.0.29",
-    "@types/query-string": "^6.3.0",
+    "@types/query-string": "6.3.0",
     "@types/react": "^18.0.26",
     "@types/react-burger-menu": "^2.8.3",
     "@types/react-datepicker": "^4.8.0",
@@ -42,7 +42,7 @@
     "@types/react-slick": "^0.23.10",
     "@types/react-sticky": "^6.0.4",
     "@types/redux-logger": "^3.0.9",
-    "@types/redux-saga": "^0.10.5",
+    "@types/redux-saga": "0.10.5",
     "clsx": "^1.2.1",
     "cypress": "^12.6.0",
     "date-fns": "^2.29.3",
