add middleware for protecting authenticated routes

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sentry/react": "^7.28.1",
     "@svgr/plugin-svgo": "^7.0.0",
     "@svgr/webpack": "^7.0.0",
+    "@types/cookies": "^0.7.7",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/lodash": "^4.14.191",
@@ -44,6 +45,7 @@
     "@types/redux-logger": "^3.0.9",
     "@types/redux-saga": "0.10.5",
     "clsx": "^1.2.1",
+    "cookies": "^0.8.0",
     "cypress": "^12.6.0",
     "date-fns": "^2.29.3",
     "flowbite": "^1.5.5",
